--- a/.github/workflows/build_generic.yml
+++ b/.github/workflows/build_generic.yml
@@ -1,3 +1,7 @@
+# SPDX-License-Identifier: GPL-3.0-or-later
+#
+# This file is part of https://github.com/dehesselle/py3framework
+
 name: build_generic
 on: [push]
 
