--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,25 +17,23 @@ jobs:
 
     ### preparations ###########################################################
 
+    - name: checkout repository
+      uses: actions/checkout@v2
+      with:
+        submodules: true
+
     - id: cache
       uses: actions/cache@v2
       env:
         CACHE_NAME: cache-dependencies
-        CACHE_KEY: ${{ env.CACHE_NAME }}-${{ hashFiles('0??-*.sh','1??-*.sh') }}
       with:
         path: ${{ env.WRK_DIR }}
-        key: ${{ env.CACHE_KEY }}
+        key: ${{ env.CACHE_NAME }}-${{ hashFiles('0??-*.sh','1??-*.sh') }}
 
     # make build environment pristine
     - name: clear /usr/local
       if: steps.cache.outputs.cache-hit != 'true'
       run: sudo rm -rf /usr/local/*
-
-    - name: checkout repository
-      if: steps.cache.outputs.cache-hit != 'true'
-      uses: actions/checkout@v2
-      with:
-        submodules: true
 
     # GitHub does not provide the 10.11 SDK (from Xcode 7.3.1). There is no
     # official public download available from Apple and I don't trust 3rd
@@ -48,7 +46,7 @@ jobs:
           env.SDK1011_DOWNLOAD_URL != null
       run:  |
             curl -L ${{ secrets.SDK1011_DOWNLOAD_URL }} | tar xJp
-            echo "SDKROOT=$GITHUB_WORKSPACE/$(basename -s .tar.xz ${{ secrets.SDK1011_DOWNLOAD_URL }})"
+            echo "SDKROOT=$GITHUB_WORKSPACE/$(basename ${SDK1011_DOWNLOAD_URL%%.tar.xz*})" >> $GITHUB_ENV
 
     ### build ##################################################################
 
@@ -67,14 +65,18 @@ jobs:
 
     ### preparations ###########################################################
 
+    - name: checkout repository
+      uses: actions/checkout@v2
+      with:
+        submodules: true
+
     - id: cache
       uses: actions/cache@v2
       env:
         CACHE_NAME: cache-dependencies
-        CACHE_KEY: ${{ env.CACHE_NAME }}-${{ hashFiles('0??-*.sh','1??-*.sh') }}
       with:
         path: ${{ env.WRK_DIR }}
-        key: ${{ env.CACHE_KEY }}
+        key: ${{ env.CACHE_NAME }}-${{ hashFiles('0??-*.sh','1??-*.sh') }}
 
     # make build environment pristine
     - name: clear /usr/local
@@ -94,7 +96,8 @@ jobs:
       if: env.SDK1011_DOWNLOAD_URL != null
       run:  |
             curl -L ${{ secrets.SDK1011_DOWNLOAD_URL }} | tar xJp
-            echo "SDKROOT=$GITHUB_WORKSPACE/$(basename -s .tar.xz ${{ secrets.SDK1011_DOWNLOAD_URL }})" >> $GITHUB_ENV
+            echo "SDKROOT=$GITHUB_WORKSPACE/$(basename ${SDK1011_DOWNLOAD_URL%%.tar.xz*})" >> $GITHUB_ENV
+
 
     ### build: Python ##########################################################
 
@@ -132,3 +135,67 @@ jobs:
         path: ${{ env.WRK_DIR }}/lxml-4.5.2-cp38-cp38-macosx_10_11_x86_64.whl  # TODO: make variable
 
 ################################################################################
+
+  python_inkscape:
+    runs-on: macos-10.15
+    env:
+      WRK_DIR: ${{ github.workspace }}/work
+    needs: dependencies   # due to this, the cache below is expected to always be there
+    steps:
+
+    ### preparations ###########################################################
+
+    - name: checkout repository
+      uses: actions/checkout@v2
+      with:
+        submodules: true
+
+    - id: cache
+      uses: actions/cache@v2
+      env:
+        CACHE_NAME: cache-dependencies
+      with:
+        path: ${{ env.WRK_DIR }}
+        key: ${{ env.CACHE_NAME }}-${{ hashFiles('0??-*.sh','1??-*.sh') }}
+
+    # make build environment pristine
+    - name: clear /usr/local
+      run: sudo rm -rf /usr/local/*
+
+    - name: checkout repository
+      uses: actions/checkout@v2
+      with:
+        submodules: true
+
+    # GitHub does not provide the 10.11 SDK (from Xcode 7.3.1). There is no
+    # official public download available from Apple and I don't trust 3rd
+    # party sources (e.g. "phracker"), so I'm using my own source.
+    - name: install MacOSX10.11.sdk (if secret is set)
+      env:
+        SDK1011_DOWNLOAD_URL: ${{ secrets.SDK1011_DOWNLOAD_URL }}
+      if: env.SDK1011_DOWNLOAD_URL != null
+      run:  |
+            curl -L ${{ secrets.SDK1011_DOWNLOAD_URL }} | tar xJp
+            echo "SDKROOT=$GITHUB_WORKSPACE/$(basename ${SDK1011_DOWNLOAD_URL%%.tar.xz*})" >> $GITHUB_ENV
+
+    ### build ##################################################################
+
+    - name: build Python
+      run: ./210a-build_python.sh
+
+    - name: build Libxml2
+      run: ./220-build_libxml2.sh
+
+    - name: package Python framework
+      run: ./310-package_framework.sh
+
+    ### artifact ###############################################################
+
+    - name: create archive
+      run: tar -C $WRK_DIR/Frameworks -c Python.framework | xz -T 0 >$GITHUB_WORKSPACE/Python.framework.inkscape.tar.xz
+
+    - name: upload archive
+      uses: actions/upload-artifact@v2
+      with:
+        name: Python framework for Inkscape
+        path: ${{ github.workspace }}/Python.framework.inkscape.tar.xz
