Get ready for merge

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -111,5 +111,5 @@ jobs:
 
     ### statistics #############################################################
 
-    - name: ccache statistics
+    - name: print ccache statistics
       run: $WRK_DIR/bin/ccache -s
